<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StartApp SDK Example</string>
    <string name="action_settings">Settings</string>
    <string name="txt_Welcome">StartApp Interstitial Showcase</string>
    <string name="txt_SecondActivity">Welcome to another Activity</string>
    <string name="gdpr_okBtn">Continue</string>
    <string name="gdpr_cancelBtn">No Thanks</string>
    <string name="gdpr_title">Would like us to present you with personalized ads?</string>
    <string name="gdpr_body">This app uses StartApp to enable/provide you with a personalized advertising experience. By clicking, ‘continue’ you agree to share your personal data on StartApp’s Network and its Business Partners and agree to the StartApp privacy policy in order to allow StartApp and its Partners to provide you with relevant ads.</string>
    <string name="gdpr_logo">StartApp logo</string>
    <string name="main_nextBtn">Next Activity</string>
    <string name="main_rewardedBtn">Show Rewarded Video</string>
    <string name="main_recyclerBtn">Native Ads in the RecyclerView</string>>
    <string name="menu_ads">Personalized Ads</string>
    <string name="list_row_title">Ad Title</string>
    <string name="list_row_description">Ad Description</string>

</resources>